--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -56,6 +56,7 @@ input::placeholder, textarea::placeholder {
     border: 1px solid #D0D5DD;
     border-radius: 8px;
     font-size: 16px;
+    box-sizing: border-box;
 }
 .input-pad:focus {
     outline: 1px solid #84CAFF;
